--- a/main.tex
+++ b/main.tex
@@ -259,7 +259,7 @@ representation of algebraic data types.
 The universe used in this paper consists of typed heterogeneous rose
 trees, a combination of mutually recursive heterogeneous lists and
 trees whose \emph{nodes} correspond to data type constructors and
-their subtrees to their fields.
+their children to their fields.
 \begin{minted}{agda}
   data HTree : Set → Set where
     Node : F as a → HList as → HTree a
@@ -281,32 +281,7 @@ their subtrees to their fields.
         data types. In the model we will just leave it abstract as a module parameter.
 \begin{minted}{agda}
 module Diff3 (F : List Set → Set → Set) where
-  postulate _=?=_ : (α : F as a) (β : F bs b) → Dec (α ≡ β)
 \end{minted}
-        \todo{Not needed if we don't discuss diff}
-	The data type \texttt{Dec (α ≡ β)} denotes decidable equality between
-	two nodes, which either contains a proof of the actual equality
-	or a counter example.
-\begin{minted}{agda}
-data Dec (P : Set) : Set where
-  yes : P → Dec P
-  no  : ¬ P → Dec P
-\end{minted}
-        \todo{This explanation is not actually essential and might be confusing
-              since the same symbol is used for values}
-	Negation of statements such as \texttt{¬ P} are encoded in type theory as
-	a function \texttt{P → ⊥}, where \texttt{⊥} is
-	the constructorless data type, which corresponds to falsity 
-	under the Curry-Howard isomorphism \cite{PropositionAsTypes}.
-	The equality definition used is a a variant of heterogeneous equality
-	tailored on nodes, whose only axiom is reflexivity:
-\begin{minted}{agda}
-data _≡_ : F as a → F bs b → Set where
-  refl : {α : F as a} → α ≡ α
-\end{minted}
-
-	In section \ref{sec:haskell} we show how it is possible to implement these 
-	features in a strongly typed functional language like Haskell.
 	
         \paragraph{Example} 
         The list \texttt{[1,2]} can be encoded in this universe as: 
@@ -452,14 +427,17 @@ e = [\textcolor{blue}{Ins (::)} , \textcolor{blue}{Ins 0}, Upd (::) (::), Upd 1 
 
 	\subsection{Diff algorithm}
         \label{subsec:diff-algo}
-	The \texttt{diff3} algorithm employs a \texttt{diff} algorithm that has the 
-	following	signature:
+	The \texttt{diff3} algorithm employs a \texttt{diff} algorithm
+        that has the following signature:
 \begin{minted}{agda}
 diff : HList as → HList bs → ES as bs
 \end{minted}
-        Nevertheless our formalization abstracts over the specific algorithm
-        used. Any \texttt{diff} algorithm that satisfy the following specifications
-        can be employed in \texttt{diff3}:
+        Nevertheless our formalization abstracts over the specific
+        algorithm used.
+        %
+        Any \texttt{diff} algorithm that satisfy the following
+        specifications, in which \texttt{≡} denotes propositional
+        equality, can be employed in \texttt{diff3}:
 \[ \texttt{e = diff x y} \qquad \Leftrightarrow \qquad \texttt{⟪ e ⟫ ≡ x} \quad \land \quad  \texttt{⟦ e ⟧ ≡ y} \]
 	This basic requirement demands that the edit script computed by 
 	\texttt{diff} precisely encodes a transformation from the source object 
@@ -492,7 +470,7 @@ Diff⇒ : Diff x y e → x ≡ ⟪ e ⟫  ×  y ≡ ⟦ e ⟧
 
 	In our implementation the \texttt{diff} algorithm employed is a 
         generalization of that proposed by Lempsink et al.\ \cite{Lemp09},
-        which will be discussed in section \href{sec:related-work}.
+        which will be discussed in section \ref{sec:related-work}.
         
         We remark that we have proved that it 
 	complies with the \texttt{Diff} specification:
@@ -528,26 +506,38 @@ diff-suff :  (x : HList xs) (y : HList ys) → Diff x y (diff x y)
 	On top of these we define a sound merging semantics.
 
 	\subsection{Alignment}
-	Two edit operations are \emph{aligned} if they share the same 
-	\emph{source} value. We naturally extend the definition of alignment to edit 
-	scripts.	Two edit scripts are \emph{aligned} if all their edits are pairwise 
-	aligned. The following data type denotes aligned edit scripts:	
+	We call two edit operations \emph{aligned} if they share the
+        same \emph{source} value.
+        %
+        We naturally extend the notion of alignment to edit
+        scripts.
+        %
+        Two edit scripts are \emph{aligned} if all their edits are
+        pairwise aligned. The following data type denotes aligned edit
+        scripts:
 \begin{minted}{agda}
 data _⋎_ : ES as bs → ES as cs → Set where
   nil : [] ⋎ []
   cons : (f : u ⟿ v) (g : u ⟿ w) → e₁ ⋎ e₂ → f ∷ e₁ ⋎ g ∷ e₂ 
 \end{minted}
-	The definition is recursive: two edit scripts are aligned if either  
-        they are both empty or their heads and their tails are both aligned.
-	Note that we do not need an auxiliary data type to encode edit 
-	alignment since this property can be enforced directly with their types.
-	For example the \texttt{cons} constructor accepts only aligned edits
-	because it requires them to have the same source value \texttt{u}.
+	The definition is recursive: two edit scripts are aligned if
+        either they are both empty or their heads and their tails are
+        both aligned.
+        %
+	Note that we do not need an auxiliary data type to encode edit
+        alignment since this property can be enforced directly with
+        their types.
+        %
+	For example the \texttt{cons} constructor accepts only aligned
+        edits because it requires them to have the same source value
+        \texttt{u}.
 	
-        Intuitively two edit scripts that have the same \emph{source} object
-        can be aligned, because they share the same collection of \emph{source} nodes.
-        However the scripts might be unaligned because of insert edits occurring
-        at different points. 
+        Intuitively two edit scripts that have the same \emph{source}
+        object can be aligned, because they share the same collection
+        of \emph{source} nodes.
+        %
+        However insert edits might break alignment because they can
+        occur at different point in the scripts.
 
         \paragraph{Example}
         Consider the list \texttt{x = [1]}, \texttt{y = [0,1]} and \texttt{z = [1,2]}.
@@ -626,9 +616,11 @@ data _⊔_↧_ : (v ⟿ a) → (v ⟿ b) → (v ⟿ c) → Set where
   Idem : (f : v ⟿ w) → f ⊔ f ↧ f
 \end{minted}
 
-	Observe that the type of the two input edits guarantees their alignment.
-	Furthermore merging determines only the \emph{target} value,
-	hence also the merged edit share the same source value.
+	Observe that the type of the two input edits guarantees their
+        alignment.
+        %
+        Furthermore determines only the \emph{target} value, hence the
+        third merged edit retain the the same source value \texttt{v}.
 
 	Each constructor represents a distinct axiom that justifies why
 	the merge is possible and determines the merged edit.
@@ -662,13 +654,16 @@ data Conflict : Val as bs → Val cs ds → Val es fs → Set where
 
 	In the type \texttt{Conflict u v w} the index \texttt{u} is
         the common source value, while indexes \texttt{v} and
-        \texttt{w} are the target values of respectively the first and
-        second edit.  Conflicts given by \texttt{InsIns} and
-        \texttt{UpdUpd} correspond to conflicting insertions and
-        updates which corresponds to the conflicts of line-based
-        \texttt{diff3}.  Those given by \texttt{UpdDel} and
-        \texttt{DelUpd} are entirely new and stem from the fact that
-        these two edits are in general irreconcilable.
+        \texttt{w} are the target values of the edits.
+        %
+        Conflicts given by \texttt{InsIns} and \texttt{UpdUpd}
+        represent conflicting insertions and updates, similar
+        to those detected by line-based \texttt{diff3}, which
+        encodes proper updates as a deletion followed by an insertion.
+        %
+        Those given by \texttt{UpdDel} and \texttt{DelUpd} are
+        entirely new and stem from the fact that these two edits are
+        in general irreconcilable.
 
 	The data type \texttt{f ⊔ g ↥ c} denotes that the edits
         \texttt{f} and \texttt{g} cannot be merged and raise conflict
@@ -828,8 +823,11 @@ data Merge₃ : ES xs ys → Es xs zs → ES₃ xs → Set where
         to reason more conveniently about its properties.
 
 	\paragraph{Diff3}
-	Now it is possible to provide the conventional \texttt{diff₃} interface, in
-	which the second object is considered \emph{base}:
+	We finally give a generic \texttt{diff₃} algorithm for
+        heterogeneous lists.
+        %
+        We follow the conventional interface, in which the second
+        argument is considered \emph{base}:
 \begin{minted}{agda}
 diff₃ : HList ys → HList xs → HList zs → ES₃ xs
 diff₃ y x z with align (diff-suff x y) (diff-suff x z)
@@ -846,7 +844,7 @@ diff₃ y x z | WA _ _ p = merge₃ p
 
         \paragraph{Type Checking}
 	Even though merging might succeed without triggering any
-        conflict the merged edit script might be invalid, i.e. it will
+        conflict the merged edit script might be invalid, i.e.\ it will
         not produce a well-typed object as \emph{target}.
         %
         The reason is that the merge operator \texttt{⊔₃} merges edits
